// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceTypeOps createResourceType() 1: Create non-existing resource type [3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6 - FrodoTestResourceType3] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684547932269,
  "description": "Frodo Test Resource Type Three",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547932269,
  "name": "FrodoTestResourceType3",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6",
}
`;

exports[`ResourceTypeOps createResourceType() 2: Create existing resource type [e219144d-8d94-47b6-8789-3a7b820d6cde - FrodoTestResourceType4] 1`] = `
{
  "code": 409,
  "message": "Resource Type e219144d-8d94-47b6-8789-3a7b820d6cde already exists",
  "reason": "Conflict",
}
`;

exports[`ResourceTypeOps deleteResourceType() 1: Delete existing resource type [3d66c934-9bab-4363-973b-f5502245decc - FrodoTestResourceType7] 1`] = `{}`;

exports[`ResourceTypeOps deleteResourceType() 2: Delete non-existing resource type [00000000-0000-0000-0000-000000000000] 1`] = `
{
  "code": 404,
  "message": "Resource Type 00000000-0000-0000-0000-000000000000 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;

exports[`ResourceTypeOps deleteResourceTypeByName() 1: Delete existing resource type by name [FrodoTestResourceType8 - 84f7b719-cbd4-4b82-8170-6c230f2973be] 1`] = `{}`;

exports[`ResourceTypeOps deleteResourceTypeByName() 2: Delete non-existing resource type by name [DoesNotExist] 1`] = `"Resource Type with name DoesNotExist does not exist in realm alpha"`;

exports[`ResourceTypeOps exportResourceType() 1: Export existing resource type by uuid [0c2b73b2-f18f-4634-85ec-14dc71f1b216 - FrodoTestResourceType9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "0c2b73b2-f18f-4634-85ec-14dc71f1b216": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931677,
      "description": "Frodo Test Resource Type Nine",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931677,
      "name": "FrodoTestResourceType9",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0c2b73b2-f18f-4634-85ec-14dc71f1b216",
    },
  },
  "script": {},
}
`;

exports[`ResourceTypeOps exportResourceType() 2: Export non-existing resource type by uuid [00000000-0000-0000-0000-000000000000] 1`] = `
"Export error:
Resource Type with uuid 00000000-0000-0000-0000-000000000000 does not exist in realm alpha"
`;

exports[`ResourceTypeOps exportResourceTypeByName() 1: Export existing resource type by name [FrodoTestResourceType10 - 6d5eed85-872b-48f4-be47-3151fd073961] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "6d5eed85-872b-48f4-be47-3151fd073961": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931808,
      "description": "Frodo Test Resource Type Ten",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931808,
      "name": "FrodoTestResourceType10",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "6d5eed85-872b-48f4-be47-3151fd073961",
    },
  },
  "script": {},
}
`;

exports[`ResourceTypeOps exportResourceTypeByName() 2: Export non-existing resource type by name [DoesNotExist] 1`] = `
"Export error:
Resource Type with name DoesNotExist does not exist in realm alpha"
`;

exports[`ResourceTypeOps exportResourceTypes() 1: Export all resource types 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147346,
      "description": "Frodo Test Resource Type Thirteen",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684546795522,
      "name": "FrodoTestResourceType13",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
    },
    "0c2b73b2-f18f-4634-85ec-14dc71f1b216": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931677,
      "description": "Frodo Test Resource Type Nine",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931677,
      "name": "FrodoTestResourceType9",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0c2b73b2-f18f-4634-85ec-14dc71f1b216",
    },
    "119b291c-40b3-4b1e-8d84-c2a561a2cb1f": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147437,
      "description": "Frodo Test Resource Type Fourteen",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684546795645,
      "name": "FrodoTestResourceType14",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
    },
    "3c5f13af-ca17-403e-b47d-d15263cce954": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684545571229,
      "description": "Frodo Test Resource Type Fifteen",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684546795776,
      "name": "FrodoTestResourceType15",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
    },
    "3d66c934-9bab-4363-973b-f5502245decc": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931412,
      "description": "Frodo Test Resource Type Seven",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931412,
      "name": "FrodoTestResourceType7",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3d66c934-9bab-4363-973b-f5502245decc",
    },
    "3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547932269,
      "description": "Frodo Test Resource Type Three",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547932269,
      "name": "FrodoTestResourceType3",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6",
    },
    "3fc799d7-b73f-49e0-a70b-e37990e54e56": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147204,
      "description": "Frodo Test Resource Type Twelve",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684546795400,
      "name": "FrodoTestResourceType12",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
    },
    "6d5eed85-872b-48f4-be47-3151fd073961": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931808,
      "description": "Frodo Test Resource Type Ten",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931808,
      "name": "FrodoTestResourceType10",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "6d5eed85-872b-48f4-be47-3151fd073961",
    },
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1682866321984,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
    "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547930774,
      "description": "Frodo Test Resource Type One",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547930774,
      "name": "FrodoTestResourceType1",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
    },
    "84f7b719-cbd4-4b82-8170-6c230f2973be": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931543,
      "description": "Frodo Test Resource Type Eight",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931543,
      "name": "FrodoTestResourceType8",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "84f7b719-cbd4-4b82-8170-6c230f2973be",
    },
    "993eba78-1c3f-4f27-b205-b4b29418f831": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147077,
      "description": "Frodo Test Resource Type Eleven",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684546795272,
      "name": "FrodoTestResourceType11",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
    },
    "ab5fb0da-8fe8-4f48-be05-aba822aa23bb": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547930912,
      "description": "Frodo Test Resource Type Two",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547930912,
      "name": "FrodoTestResourceType2",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
    },
    "cef1897f-1be5-4025-beed-a155605e2f83": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931234,
      "description": "Frodo Test Resource Type Five",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547932401,
      "name": "FrodoTestResourceType5",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
    },
    "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b": {
      "actions": {
        "GRANT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030586,
      "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1682866321756,
      "name": "OAuth2 Scope",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
        "*",
      ],
      "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
    },
    "e219144d-8d94-47b6-8789-3a7b820d6cde": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684547931106,
      "description": "Frodo Test Resource Type Four",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684547931106,
      "name": "FrodoTestResourceType4",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "e219144d-8d94-47b6-8789-3a7b820d6cde",
    },
  },
  "script": {},
}
`;

exports[`ResourceTypeOps getResourceType() 1: Get existing resource type by uuid [7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2 - FrodoTestResourceType1] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684547930774,
  "description": "Frodo Test Resource Type One",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547930774,
  "name": "FrodoTestResourceType1",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
}
`;

exports[`ResourceTypeOps getResourceType() 2: Get non-existing resource type by uuid [00000000-0000-0000-0000-000000000000] 1`] = `
{
  "code": 404,
  "message": "Resource Type 00000000-0000-0000-0000-000000000000 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;

exports[`ResourceTypeOps getResourceTypeByName() 1: Get existing resource type by name [FrodoTestResourceType2 - ab5fb0da-8fe8-4f48-be05-aba822aa23bb] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684547930912,
  "description": "Frodo Test Resource Type Two",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547930912,
  "name": "FrodoTestResourceType2",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
}
`;

exports[`ResourceTypeOps getResourceTypeByName() 2: Get non-existing resource type by name [DoesNotExist] 1`] = `"Resource Type with name DoesNotExist does not exist in realm alpha"`;

exports[`ResourceTypeOps getResourceTypes() 1: Get all resource types 1`] = `
[
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547930774,
    "description": "Frodo Test Resource Type One",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547930774,
    "name": "FrodoTestResourceType1",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547931808,
    "description": "Frodo Test Resource Type Ten",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547931808,
    "name": "FrodoTestResourceType10",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "6d5eed85-872b-48f4-be47-3151fd073961",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684544147077,
    "description": "Frodo Test Resource Type Eleven",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684546795272,
    "name": "FrodoTestResourceType11",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684544147204,
    "description": "Frodo Test Resource Type Twelve",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684546795400,
    "name": "FrodoTestResourceType12",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684544147346,
    "description": "Frodo Test Resource Type Thirteen",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684546795522,
    "name": "FrodoTestResourceType13",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684544147437,
    "description": "Frodo Test Resource Type Fourteen",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684546795645,
    "name": "FrodoTestResourceType14",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684545571229,
    "description": "Frodo Test Resource Type Fifteen",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684546795776,
    "name": "FrodoTestResourceType15",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547930912,
    "description": "Frodo Test Resource Type Two",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547930912,
    "name": "FrodoTestResourceType2",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547931106,
    "description": "Frodo Test Resource Type Four",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547931106,
    "name": "FrodoTestResourceType4",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "e219144d-8d94-47b6-8789-3a7b820d6cde",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547931234,
    "description": "Frodo Test Resource Type Five",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547931234,
    "name": "FrodoTestResourceType5",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547931412,
    "description": "Frodo Test Resource Type Seven",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547931412,
    "name": "FrodoTestResourceType7",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "3d66c934-9bab-4363-973b-f5502245decc",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547931543,
    "description": "Frodo Test Resource Type Eight",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547931543,
    "name": "FrodoTestResourceType8",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "84f7b719-cbd4-4b82-8170-6c230f2973be",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684547931677,
    "description": "Frodo Test Resource Type Nine",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547931677,
    "name": "FrodoTestResourceType9",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "0c2b73b2-f18f-4634-85ec-14dc71f1b216",
  },
  {
    "actions": {
      "GRANT": true,
    },
    "createdBy": "id=dsameuser,ou=user,ou=am-config",
    "creationDate": 1595479030586,
    "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1682866321756,
    "name": "OAuth2 Scope",
    "patterns": [
      "*://*:*/*",
      "*://*:*/*?*",
      "*",
    ],
    "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
  },
  {
    "actions": {
      "DELETE": true,
      "GET": true,
      "HEAD": true,
      "OPTIONS": true,
      "PATCH": true,
      "POST": true,
      "PUT": true,
    },
    "createdBy": "id=dsameuser,ou=user,ou=am-config",
    "creationDate": 1595479030487,
    "description": "The built-in URL Resource Type available to OpenAMPolicies.",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1682866321984,
    "name": "URL",
    "patterns": [
      "*://*:*/*",
      "*://*:*/*?*",
    ],
    "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  },
]
`;

exports[`ResourceTypeOps importFirstResourceType() 1: Import first resource type 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684544147346,
  "description": "Frodo Test Resource Type Thirteen",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547933156,
  "name": "FrodoTestResourceType13",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
}
`;

exports[`ResourceTypeOps importResourceType() 1: Import existing resource type by uuid [993eba78-1c3f-4f27-b205-b4b29418f831 - FrodoTestResourceType11] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684544147077,
  "description": "Frodo Test Resource Type Eleven",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547932907,
  "name": "FrodoTestResourceType11",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
}
`;

exports[`ResourceTypeOps importResourceType() 2: Import non-existing resource type by uuid [00000000-0000-0000-0000-000000000000] 1`] = `
"Import error:
00000000-0000-0000-0000-000000000000 not found in import data!"
`;

exports[`ResourceTypeOps importResourceTypeByName() 1: Export existing resource type by name [FrodoTestResourceType12 - 3fc799d7-b73f-49e0-a70b-e37990e54e56] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684544147204,
  "description": "Frodo Test Resource Type Twelve",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547933031,
  "name": "FrodoTestResourceType12",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
}
`;

exports[`ResourceTypeOps importResourceTypeByName() 2: Export non-existing resource type by name [DoesNotExist] 1`] = `
"Import error:
DoesNotExist not found in import data!"
`;

exports[`ResourceTypeOps importResourceTypes() 1: Import all resource types 1`] = `
[
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684544147437,
    "description": "Frodo Test Resource Type Fourteen",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547933281,
    "name": "FrodoTestResourceType14",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
  },
  {
    "actions": {
      "action1": true,
      "action2": true,
    },
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684545571229,
    "description": "Frodo Test Resource Type Fifteen",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684547933401,
    "name": "FrodoTestResourceType15",
    "patterns": [
      "pattern2://*:*/*?*",
      "pattern1://*:*/*",
    ],
    "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
  },
]
`;

exports[`ResourceTypeOps updateResourceType() 1: Update existing resource type [cef1897f-1be5-4025-beed-a155605e2f83 - FrodoTestResourceType5] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684547931234,
  "description": "Frodo Test Resource Type Five",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684547932401,
  "name": "FrodoTestResourceType5",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
}
`;

exports[`ResourceTypeOps updateResourceType() 2: Update non-existing resource type [05e5fdb6-435e-43d9-b707-c73f7f347358 - FrodoTestResourceType6] 1`] = `
{
  "code": 404,
  "message": "Resource Type 05e5fdb6-435e-43d9-b707-c73f7f347358 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;
